# SigScout

./: .gitignore  README.en.md  README.md  pyproject.toml  recover_SigScout_lan.bat  start_SigScout_lan.bat
scripts/: recover_SigScout_lan.ps1  start_SigScout_lan.ps1
sigscout/: __init__.py
src/sigscout/: __init__.py  cli.py
src/sigscout/adapters/: __init__.py  process_runner.py  quickgo.py  uniprot.py  uspnet.py
src/sigscout/core/: __init__.py  inputs.py  models.py  paths.py
src/sigscout/data/: __init__.py  source_protein_route_map.json
src/sigscout/presets/: __init__.py  opn.py
src/sigscout/services/: __init__.py  exports.py  fusion_constructs.py  inputs.py  library.py  rules.py  screening.py  source_protein_annotation.py
src/sigscout/ui/: streamlit_app.py
tests/: test_fusion_constructs.py  test_inputs.py  test_library.py  test_quickgo.py  test_rules.py  test_screening.py  test_source_protein_annotation.py  test_uspnet.py
